--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,8 +12,6 @@ galaxy_info:
 
   platforms:
     - name: Debian
-      versions: all
-    - name: Ubuntu
-      versions: all
+      versions: jessie
 
   galaxy_tags: []
