Update meta information for Ansible Galaxy
While the Travis tests don't yet run on Debian Jessie and Ubuntu 15.x
due to systemd headaches, they have been tested elsewhere, so we can
mark them as supported for now.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,6 +12,8 @@ galaxy_info:
 
   platforms:
     - name: Debian
-      versions: jessie
+      versions: all
+    - name: Ubuntu
+      versions: all
 
   galaxy_tags: []
